<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="40dp"
    tools:context=".view.LoginFragment">

    <!--1-->
    <ImageView
        android:id="@+id/imageView_login_fragment_1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <!--2-->
    <TextView
        android:id="@+id/textView_login_fragment_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/a1"
        android:textColor="@color/primary_text"
        android:textSize="7pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_login_fragment_1" />

    <!--3-->
    <EditText
        android:id="@+id/editText_login_fragment_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/a2"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_fragment_2" />

    <!--4-->
    <TextView
        android:id="@+id/textView_login_fragment_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/a3"
        android:textColor="@color/primary_text"
        android:textSize="7pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_fragment_3" />

    <!--5-->
    <EditText
        android:id="@+id/editTex_login_fragment_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_fragment_4" />

    <!--6-->
    <TextView
        android:id="@+id/textView_login_fragment_6"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/a4"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/editTex_login_fragment_5"
        app:layout_constraintTop_toBottomOf="@+id/editTex_login_fragment_5" />

    <!--7-->
    <Button
        android:id="@+id/button_login_fragment_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@color/colorAccent"
        android:text="@string/a5"
        android:textColor="@color/icons"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_fragment_6" />

    <!--8-->
    <TextView
        android:id="@+id/textView_login_fragment_8"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="175dp"
        android:gravity="center"
        android:text="@string/a6"
        android:textColor="@color/colorAccent"
        android:textSize="7pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_fragment_7" />

</androidx.constraintlayout.widget.ConstraintLayout>