<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="40dp"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".view.ResetPasswordFragment">

    <!--1-->
    <ImageView
        android:id="@+id/imageView_reset_password_fragment_1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <!--2-->
    <TextView
        android:id="@+id/textView_reset_password_fragment_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/a13"
        android:textColor="@color/primary_text"
        android:textSize="7pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_reset_password_fragment_1" />

    <!--3-->
    <EditText
        android:id="@+id/editText_reset_password_fragment_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/a14"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView_reset_password_fragment_2" />

    <!--4-->
    <Button
        android:id="@+id/button_reset_password_fragment_4"
        app:layout_constraintTop_toBottomOf="@+id/editText_reset_password_fragment_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/a15"
        android:textColor="@color/icons"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="561dp" />

</androidx.constraintlayout.widget.ConstraintLayout>